@@ -13,6 +13,7 @@
 * Client/TextUI: new command "usd" - tries to figure out curent BTC/USD price, using UTXOracle method
 * Client/WebUI: some improvements to the block fees chart (in Home and Blocks tab)
 * Client/TextUI: some code cleanup
+* Tools: each tool moved it its onw sub-directory (IDE-s did not like multiple main-s in same folder)
 
 1.10.2 - 2022-09-06:
 * Client: New config value "Memory.CompressBlockDB" (default true)
